Closed Bug 1503011 Opened 6 years ago Closed 6 years ago

We do not call DNSPrefetch in nsHttpChannel if tracking is not used.

Categories

(Core :: Networking: HTTP, defect, P1)

63 Branch
defect

Tracking

()

RESOLVED FIXED
mozilla65
Tracking Status
firefox65 --- fixed

People

(Reporter: dragana, Assigned: dragana)

Details

(Whiteboard: [necko-triaged])

Attachments

(1 file)

      No description provided.
Priority: -- → P1
Whiteboard: [necko-triaged]
Keywords: checkin-needed
Pushed by ebalazs@mozilla.com:
https://hg.mozilla.org/integration/autoland/rev/80f9ac0ab7dc
Make sure DNSPrefetch is called. r=mayhemer
Keywords: checkin-needed
https://hg.mozilla.org/mozilla-central/rev/80f9ac0ab7dc
Status: ASSIGNED → RESOLVED
Closed: 6 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla65
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: