Bug 1503011 - Make sure DNSPrefetch is called. r=mayhemer

Differential Revision: https://phabricator.services.mozilla.com/D10118